Replace deprecated new URL constructors in appserver/web
Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>