@@ -204,9 +204,9 @@ public class WarHandler extends AbstractArchiveHandler {
             }
 
             try {
-                new URL(path);
+                URI.create(path).toURL();
                 cloader.addRepository(path);
-            } catch (MalformedURLException mue1) {
+            } catch (IllegalArgumentException | MalformedURLException mue1) {
                 // Not a URL, interpret as file
                 File file = new File(path);
                 if (!file.isAbsolute()) {
