@@ -26,6 +26,8 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.net.InetAddress;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.UnknownHostException;
 import java.util.Hashtable;
@@ -604,7 +606,7 @@ public final class IntrospectionUtils {
                 // On some environments is still the jre directory.
                 f = new File(javaHome + "/../lib/tools.jar");
             }
-            v.addElement(new URL("file", "", f.getAbsolutePath()));
+            v.addElement(f.getAbsoluteFile().toURI().toURL());
         } catch (MalformedURLException ex) {
             ex.printStackTrace();
         }
@@ -637,7 +639,11 @@ public final class IntrospectionUtils {
             if (!f.exists()) {
                 return null;
             }
-            return new URL("file", "", path);
+            try {
+                return new URI("file", "", path, null).toURL();
+            } catch (URISyntaxException use) {
+                throw new MalformedURLException(use.getMessage());
+            }
         } catch (Exception ex) {
             ex.printStackTrace();
             return null;
@@ -667,7 +673,12 @@ public final class IntrospectionUtils {
                 if (f.isDirectory()) {
                     path += "/";
                 }
-                URL url = new URL("file", "", path);
+                URL url;
+                try {
+                    url = new URI("file", "", path, null).toURL();
+                } catch (URISyntaxException use) {
+                    throw new MalformedURLException(use.getMessage());
+                }
                 if (!jars.contains(url)) {
                     jars.addElement(url);
                 }
