@@ -17,6 +17,8 @@
 package org.glassfish.web.deployment.util;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 /**
@@ -77,6 +79,10 @@ public class VirtualServerInfo {
      * @return the web server root URL
      */
     public URL getWebServerRootURL() throws MalformedURLException {
-        return new URL(protocol, host, port, "");
+        try {
+            return new URI(protocol, null, host, port, "", null, null).toURL();
+        } catch (URISyntaxException e) {
+            throw new MalformedURLException(e.getMessage());
+        }
     }
 }
